Promote Dref’s final SimpleFactions 2.8.7 updates to main (#2)
* Began work on the guilds

* added provinces and terrain stuff

* working on guild branches

* database refactor and guild command

* guild creation

* guild creation works

* guild creation works

* guild invites and joining

* Guild GUI work

* moved banks and wealth to guilds

* added branches to the menu, guilds framework done

* branch displays started

* branch upgrades

* estimates, need to rework those

* Guild upgrade work and trade changes

* guild list gui + map api stuff

* updated compiler and mapsystem to work with the website

* dummify added

* Working yet more on trade balance

* Trade calculation changes

* guild branches complete

* started on laws

* added law display with effects

* Economic impact of laws

* laws done for now

* basic setup for rules check and working on government and council

* working on stability

* stability and government view

* Law proposals added

* began on tax proposals

* tax proposals working (need to change vassal taxes)

* government done for now

* began work on the ledger

* moved some income logic from the trade breakdown to the ledger

* ledger works and lots of stuff with tariffs and taxes

* bracket applying works now

* working on daily income settlement

* ledger done

* relation limits, tariff by ID and law applying on load

* vassals provide stability, council gui stuff

* council appointments

* economic impact helper class and working on sessions now

* session holograms, start and end

* session voting and proposal applying

* sessions work now (probably forgot something)

* law effects complete

* lawhandler persistence

* tax persistence

* governent persistence

* Persistence done

* started on elections

* voting booths

* candidate view

* candidate signup

* casting votes done

* election effects done (and persistence)

* elections done for now

* blocked setting leader in a democracy

* guild join fix

* started on upgrades

* upg